--- a/index.html
+++ b/index.html
@@ -5,14 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
 
-<body>
-    <header>
-
+<body class="open-sans-normal">
+    <header class="header secondary-background-color">
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="color-dark2" href="">Portfolio</a></li>
+                <li><a class="color-dark2">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire me </button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-gretings"> Hi, I am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <div class="p-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</div>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-picture" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="about secondary-background-color">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Marry</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">marry3@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">form</p>
+                    <p class="item-description">Dhaka, Bangladesh</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Work </p>
+                    <p class="item-description">As a engineer</p>
+                </div>
+            </div>
 
+        </section>
     </main>
     <footer>
 
