Added what i do and  summary & rersume and downlaod cv button

--- a/index.html
+++ b/index.html
@@ -98,6 +98,66 @@
                 </div>
             </div>
         </section>
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">High School Diploma in Science</h4>
+                        <h5 class="experience-sub-title">Phillips Exeter Academy | 2007 - 2011</h5>
+                        <div class="experience-description">Advanced coursework in mathematics, physics, and
+                            computer science.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title"> Bachelor in Electrical and Electronic Engineering</h4>
+                        <h5 class="experience-sub-title">Massachusetts Institute of Technology (MIT) | 2011 - 2015
+                        </h5>
+                        <div class="experience-description">Focus on embedded systems, digital signal processing,
+                            and renewable energy applications.</div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Front-End Developer</h4>
+                        <h5 class="experience-sub-title">Google LLC | 2017 - 2020</h5>
+                        <div class="experience-description">Developed responsive web applications using React </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">UI/UX Developer</h4>
+                        <h5 class="experience-sub-title">Microsoft Corporation | 2015 - 2017</h5>
+                        <div class="experience-description">Developed responsive web applications using React,
+                            Angular, and modern JavaScript frameworks.</div>
+                    </div>
+                </div>
+
+
+
+            </div>
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary">Download CV </button>
+            </div>
+        </section>
     </main>
     <footer>
 
