--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style/portfolio.css">
+    <script src="https://kit.fontawesome.com/68b9ccd9b2.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -29,8 +30,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <div class="p-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</div>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-picture" src="images/hardy.png" alt="">
         </div>
@@ -155,7 +156,7 @@
 
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV </button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV </button>
             </div>
         </section>
     </main>
